<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/light_orange" >
    
    <include 
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>
	
	<TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:padding="2dp"
        android:gravity="center_horizontal"
        android:background="@color/orange"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     	android:baselineAligned="false"
        android:orientation="horizontal">
        
	    <RelativeLayout 
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.05"></RelativeLayout>
	    
	    <RelativeLayout 
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.90">
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="20dp"
	            android:paddingLeft="24dp"
	            android:paddingRight="24dp"
	            android:orientation="vertical">
	            
	        	<GridLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="24dp"
				    android:alignmentMode="alignBounds"
				    android:useDefaultMargins="true"
				    android:columnOrderPreserved="false"
				    android:columnCount="1"
				    android:rowCount="10">
				    
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
 				      	android:textColor="@color/white"
					    android:text="@string/username"/>
					<EditText 
					    android:id="@+id/edittext_username"
				       	android:textColor="@color/white"
			        	android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:inputType="text"/>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:text="@string/password"/>
					<EditText
					    android:id="@+id/edittext_password"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:inputType="textPassword"
					    android:lines="1"/>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:text="@string/email"/>
					<EditText
					    android:id="@+id/edittext_email"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:inputType="textEmailAddress"
					    android:lines="1"/>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:text="@string/gender"/>
				    <RadioGroup 
				        android:id="@+id/radiogroup_gender"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			            android:orientation="horizontal">
						<RadioButton 
						    android:id="@+id/radiobutton_male"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
				       		android:textColor="@color/white"
			    		    android:text="@string/male"/>
						<RadioButton 
						    android:id="@+id/radiobutton_female"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
					      	android:textColor="@color/white"
			    			android:text="@string/female"/>
					</RadioGroup>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
			           	android:textColor="@color/white"
					    android:text="@string/firstname"/>
					<EditText
					    android:id="@+id/edittext_firstname"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
		       			android:textColor="@color/white"
			    	    android:inputType="text"
					    android:lines="1"/>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
				        android:text="@string/lastname"/>
					<EditText
					    android:id="@+id/edittext_lastname"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:inputType="text"
					    android:lines="1"/>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:text="@string/address"/>
					<EditText
					    android:id="@+id/edittext_address"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:inputType="textPostalAddress"
					    android:lines="1"/>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:text="@string/postal_code"/>
					<EditText
					    android:id="@+id/edittext_postalcode"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:inputType="numberSigned"
					    android:lines="1"/>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:text="@string/city"/>
					<EditText
					    android:id="@+id/edittext_city"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:inputType="text"
					    android:lines="1"/>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:text="@string/country"/>
					<EditText
					    android:id="@+id/edittext_country"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:inputType="text"
					    android:lines="1"/>
					<TextView 
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:text="@string/birthday"/>
					<EditText
					    android:id="@+id/edittext_birthday"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
				       	android:textColor="@color/white"
			    	    android:inputType="text"
					    android:lines="1"/>
				</GridLayout>
				
	        	<ImageButton 
				    android:id="@+id/button_create_account"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_horizontal"
			   	    android:background="@null"
				    android:src="@drawable/selector_button_style_create_account"/>
	    	</LinearLayout>
	    	
		</RelativeLayout>
			
		<RelativeLayout 
		    android:layout_width="0dip"
		    android:layout_height="match_parent"
		    android:layout_weight="0.05"></RelativeLayout>	
	</LinearLayout>
	
        	    		
</LinearLayout>
