<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <include 
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

  	<ProgressBar 
       android:id="@+id/progress_circular"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:progressDrawable="@drawable/rotate_progress_bar"
       android:layout_centerInParent="true"/>
    
    <LinearLayout 
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        android:padding="20dp">
		<EditText 
		    android:id="@+id/input_search"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        android:layout_marginBottom="24dp"
	        android:background="@drawable/layer_list_custom_search_edittext"
	        android:textColor="@color/grey"
	        android:hint="@string/search_hint"
	        android:singleLine="true"
	        android:lines="1"/>	
	
		<GridLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:columnCount="2"
		    android:rowCount="3"
		    android:orientation="horizontal"
		    android:paddingTop="20dp">
	   		<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="start"
			    android:textSize="18sp"
			    android:text="@string/dish_type"/>
			<Spinner 
			    android:id="@+id/dish_type"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="end"
			    android:spinnerMode="dropdown"/>
	   		<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="start"
			    android:textSize="18sp"
			    android:text="@string/country_search"/>
			<Spinner 
			    android:id="@+id/country_list"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="end"
			    android:spinnerMode="dropdown"/>
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:layout_gravity="start"
			    android:textSize="18sp"
			    android:text="@string/ingredient"/>
			<Spinner 
			    android:id="@+id/ingredient_list"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="end"
			    android:spinnerMode="dropdown"/>
	    </GridLayout>
	
		<GridLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:columnCount="2"
		    android:rowCount="1"
		    android:orientation="horizontal">
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="5dp"
			    android:layout_gravity="start"
			    android:textSize="18sp"
			    android:text="@string/calories"/>
			<TextView 
			    android:id="@+id/calories_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="5dp"
			    android:layout_gravity="end"
			    android:textSize="20sp"/>
		</GridLayout>
		<SeekBar 
		    android:id="@+id/calories_volume"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:progress="0"
		    android:secondaryProgress="0"
		    android:max="3000"/>
		
		
		<GridLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:columnCount="2"
		    android:rowCount="1"
		    android:orientation="horizontal">
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="5dp"
			    android:layout_gravity="start"
			    android:textSize="18sp"
			    android:text="@string/cost"/>
			<TextView 
			    android:id="@+id/cost_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="5dp"
			    android:layout_gravity="end"
			    android:textSize="20sp"/>
		</GridLayout>
		<SeekBar 
		    android:id="@+id/cost_volume"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:progress="0"
		    android:secondaryProgress="0"
		    android:max="100"/>
		
		<GridLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:columnCount="2"
		    android:rowCount="1"
		    android:orientation="horizontal">
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="5dp"
			    android:textSize="18sp"
			    android:text="@string/difficulty"/>
			<TextView 
			    android:id="@+id/difficulty_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="5dp"
			    android:layout_gravity="end"
			    android:textSize="20sp"/>
		</GridLayout>		
		<SeekBar 
		    android:id="@+id/difficulty_volume"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:progress="0"
		    android:secondaryProgress="0"
		    android:max="5"/>
		
		<ImageButton 
		    android:id="@+id/btn_search"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/selector_button_style_search"
		    android:background="@android:color/transparent"
		    android:layout_gravity="center_horizontal"/>
		
		<ProgressBar 
		    android:id="@+id/progress_circular_searching"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:progressDrawable="@drawable/rotate_progress_bar"
		    android:visibility="gone"/>
	</LinearLayout>
</RelativeLayout>
